--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.18.1
   provider: ^6.1.1
   fluttertoast: ^8.2.4
+  mask_text_input_formatter: ^2.9.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
